Fix helpwindow dark mode style

--- a/src/main/resources/view/HelpWindowDark.css
+++ b/src/main/resources/view/HelpWindowDark.css
@@ -21,6 +21,7 @@
 
 .help-textbox {
   -fx-text-fill: white;
+  -fx-fill: white;
 }
 
 #errorMessageLabel {
